Fix button size on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -265,6 +265,12 @@ fieldset[disabled] .btn-xl.active {
     }
 }
 
+@media(max-width: 768px) {
+    .btn-xl {
+        width: auto;
+    }
+}
+
 header {
     text-align: center;
     color: #fff;
@@ -293,7 +299,7 @@ header .intro-text .intro-lead-in {
     line-height: 22px;
     padding: 18px 40px;
     text-align: center;
-    text-shadow: 0px 1px #FFF;    
+    text-shadow: 0px 1px #FFF;
 }
 
 header .intro-text .intro-heading {
